<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Corri Forrest</string>
    <string name="app_logo_content_description">Corri Forrest - App logo</string>

    <string name="navigation_drawer_open">Apri il navigation drawer</string>
    <string name="navigation_drawer_close">Chiudi il navigation drawer</string>

    <string name="dialogmap_close">Chiudi</string>


    <string name="interval_period_text">Periodo</string>
    <string name="radio_period_custom_interval">Intervallo personalizzato</string>
    <string name="radio_period_day">Giorno</string>
    <string name="radio_period_month">Mese</string>
    <string name="radio_period_year">Anno</string>
    <string name="radio_period_all">Tutto</string>

    <string name="interval_from_text">Dal</string>
    <string name="interval_to_text">al</string>


    <string name="numpicker_title_month">Mese</string>
    <string name="numpicker_title_year">Anno</string>

    <string name="numpicker_title_calories">Calorie da bruciare (kcal)</string>

    <string name="numpicker_title_distance">Distanza da percorrere (km)</string>

    <string name="numpicker_title_hours">Ore</string>
    <string name="numpicker_title_minutes">Minuti</string>
</resources>