<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:gravity="center"
        android:text="@string/interval_period_text"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <RadioGroup
        android:id="@+id/history_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/history_radioCustom"
            android:layout_width="85dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"

            android:text="@string/radio_period_custom_interval"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/history_radioMonth"
            android:layout_width="85dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"


            android:text="@string/radio_period_month"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/history_radioYear"
            android:layout_width="85dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"


            android:text="@string/radio_period_year"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/history_radioAll"
            android:layout_width="85dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"


            android:text="@string/radio_period_all"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp"/>

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:id="@+id/history_customSelection"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/interval_from_text"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/history_buttonFrom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="10dp"
            android:text="12/05/1983"
            android:textSize="15sp"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/interval_to_text"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/history_buttonTo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="10dp"
            android:text="18/05/1983"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/history_monthSelection"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/history_buttonMonth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"

            android:text="08/1986"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/history_yearSelection"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/history_buttonYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"

            android:text="1989"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/history_allSelection"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="5dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/history_noSessionsPresent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/history_no_sessions_present"
        android:textColor="@color/red"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/history_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/black"
        android:dividerHeight="2dp"
        >
    </ListView>


</LinearLayout>